deployment/k8s/tla-sample-backend/local/tla-sample-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tla-sample-backend-ingress
spec:
  rules:
    - host: tla-sample-app.contextmapper.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tla-sample-backend
                port:
                  number: 8080
